# texere

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: bench.yml  ci.yml  docs.yml
benchmarks/: CMakeLists.txt  bench_case.cpp  bench_convert.cpp  bench_framework.hpp  bench_inputs.hpp  bench_normalize.cpp  bench_string.cpp  bench_validate_utf8.cpp
cmake/: texere-config.cmake.in
dev/bench/: data.js
docs/: comparison.html  design_rationale.md
include/texere/: case.hpp  convert.hpp  expected.hpp  format.hpp  grapheme.hpp  iterator.hpp  normalize.hpp  string.hpp  string_view.hpp
scripts/: build.sh  check-branch.sh  clean.sh  format.sh  new-branch.sh  test.sh  worktree.sh
src/: case.cpp  convert.cpp  iterator.cpp  normalize.cpp  string.cpp  unicode_internal.hpp
tests/: CMakeLists.txt  test_algorithms.cpp  test_boundary.cpp  test_case.cpp  test_convert.cpp  test_expected.cpp  test_grapheme.cpp  test_normalize.cpp  test_string.cpp  test_string_view.cpp
tools/: check_docs.py
